[package]
name = "sparkfun_samd21_mini"
version = "0.1.0"
authors = ["Ze'ev Klapow <zklapow@gmail.com>"]
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
description = "Board Support crate for the Sparkfun SAMD21 Mini Breakout"

[dependencies]
cortex-m = "~0.4"
embedded-hal = "~0.2"
nb = "~0.1"
atsamd21-hal = "~0.1"

[dev-dependencies]
panic-abort = "~0.1"
panic-semihosting = "~0.1"
cortex-m-semihosting = "~0.2"
cortex-m-rtfm = "~0.3"
sx1509 = "~0.2"

[features]
# ask the HAL to enable atsamd21g18a support
default = ["rt", "atsamd21-hal/samd21g18a"]
rt = ["atsamd21-hal/rt"]
unproven = ["atsamd21-hal/unproven"]
use_semihosting = []
